--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,14 +1,15 @@
+platform :ios, '10.0'
 source 'https://github.com/CocoaPods/Specs.git'
-install! 'cocoapods', :deterministic_uuids => false
+#install! 'cocoapods', :deterministic_uuids => false
 inhibit_all_warnings!
 use_frameworks!
 
 def import_pods
-    pod 'WKZombie', :path => '../'
+    pod 'XYDWKZombie', :path => '../'
 end
 
 target 'Example iOS' do
-	platform :ios, '9.1'
+	platform :ios, '10.0'
 	import_pods
 end
 
@@ -20,7 +21,7 @@ end
 post_install do |installer|
   installer.pods_project.targets.each do |target|
       target.build_configurations.each do |config|
-          config.build_settings['SWIFT_VERSION'] = '4.0'
+          config.build_settings['SWIFT_VERSION'] = '5.0'
       end
   end
 end
