--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,5 +1,6 @@
 platform :ios, '10.0'
-source 'https://github.com/CocoaPods/Specs.git'
+#source 'https://github.com/CocoaPods/Specs.git'
+source 'https://cdn.cocoapods.org/'
 #install! 'cocoapods', :deterministic_uuids => false
 inhibit_all_warnings!
 use_frameworks!
@@ -14,7 +15,7 @@ target 'Example iOS' do
 end
 
 target 'Example OSX' do
-	platform :osx, '10.11'
+	platform :osx, '14.2'
 	import_pods
 end
 
